[package]
name = "mlvd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
argh = "0.1.9"
colored = "2.0.0"
env_logger = "0.9.3"
log = "0.4.17"
rand = "0.8.5"
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
ureq = { version = "2.5.0", features = ["json"] }
